# www.carecodeconnect.io

./: CNAME  README.md  _publish.yml  _quarto.yml  about.html  about.qmd  blog.qmd  index.html  index.qmd  projects.html  projects.qmd  pyproject.toml  requirements.txt  robots.txt  subscribe.html  testimonials.html  testimonials.qmd
_site/: blog.html  listings.json  projects.html  search.json  sitemap.xml  testimonials.html
_site/blog/: 2026-03-01-welcome.html
blog/: 2026-03-01-welcome.qmd
blog/in-praise-of-documentation/: AGENTS.md  README.md  pyproject.toml
docs/: about.html  blog.html  blog.xml  index.html  listings.json  projects.html  robots.txt  search.json  sitemap.xml  testimonials.html
docs/blog/: 2026-03-01-welcome.html
posts/in-praise-of-documentation/: index.qmd  pyproject.toml
posts/in-praise-of-documentation/data/: ngrams.csv
posts/in-praise-of-documentation/slides/: presentation.qmd
posts/rss-test-stub/: index.qmd
projects/mapmind/: combined_heatmap.html  combined_map.html  combined_mindfulness_centers_map.html  combined_training_retreat_centres_map.html  conda-mapmind-portable.yml  conda-mapmind.yml  england_mindfulness_centers_map.html  heatmap.html  map_retreat_centres.html  mapmind_demographics.html  mapmind_demographics.qmd  mapmind_mapping.qmd  mapmind_technology.html  mapmind_technology.qmd  mindfulness_centers_heatmap.html  mindfulness_centers_map.html  mindfulness_centers_map_with_layers.html  postcode_map.html  scotland_nonuk_mindfulness_centers_map.html  training_centers_heatmap.html
projects/server/: server.html  server.qmd
(+46 files in other folders)
