[project]
name = "carecodeconnect-site"
version = "0.1.0"
description = "Python dependencies for Quarto-rendered pages (MapMind projects, blog posts with code)"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "folium>=0.15",
    "geopandas>=0.14",
    "geopy>=2.4",
    "great-tables>=0.20.0",
    "imbalanced-learn>=0.11",
    "ipykernel>=7.0",
    "ipyleaflet>=0.20.0",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "nltk>=3.8",
    "numpy>=1.26",
    "optuna>=3.0",
    "pandas>=2.0",
    "plotly>=5.18",
    "plotnine>=0.15",
    "polars>=1.30",
    "pyarrow>=15",
    "prettytable>=3.9",
    "pyreadstat>=1.2",
    "pyyaml>=6",
    "requests>=2.31",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "seaborn>=0.13",
    "selenium>=4.15",
    "shapely>=2.0",
    "statsmodels>=0.14",
    "xgboost>=2.0",
]
