[project]
name = "pydata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "great-tables>=0.20.0",
    "ipykernel>=7.2.0",
    "ipyleaflet>=0.20.0",
    "jupyter>=1.1.1",
    "plotnine>=0.15.3",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "selenium>=4.41.0",
]
